Fix hero overflow on right for smallest screen widths

--- a/retirement_api/static/retirement/css/claiming.css
+++ b/retirement_api/static/retirement/css/claiming.css
@@ -999,7 +999,7 @@ form {
   }
 
   #claiming-social-security .claiming-hero {
-    margin: 0 -30px 0px -30px;
+    margin: 0 -15px 0px -30px;
     width: auto;
   }
 }
